rbx_xml/tests/snapshots/test_files__ball_socket_constraint.snap
---
source: rbx_xml/tests/test-files.rs
expression: viewer.view_children(&dom)
---
- referent: referent-0
  name: BallSocketConstraint
  class: BallSocketConstraint
  properties:
    Attachment0: "null"
    Attachment1: "null"
    Attributes:
      Attributes: {}
    Color:
      BrickColor: 1009
    Enabled:
      Bool: true
    LimitsEnabled:
      Bool: false
    MaxFrictionTorqueXml:
      Float32: 0
    Radius:
      Float32: 0.15
    Restitution:
      Float32: 0
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    TwistLimitsEnabled:
      Bool: false
    TwistLowerAngle:
      Float32: -45
    TwistUpperAngle:
      Float32: 45
    UpperAngle:
      Float32: 45
    Visible:
      Bool: false
  children: []

