rbx_xml/tests/snapshots/test_files__empty_font.snap
---
source: rbx_xml/tests/test-files.rs
expression: viewer.view_children(&dom)
---
- referent: referent-0
  name: Bold Denk
  class: TextLabel
  properties:
    Active:
      Bool: false
    AnchorPoint:
      Vector2:
        - 0
        - 0
    Attributes:
      Attributes: {}
    AutoLocalize:
      Bool: true
    AutomaticSize:
      Enum: 0
    BackgroundColor3:
      Color3:
        - 0.6392157
        - 0.63529414
        - 0.64705884
    BackgroundTransparency:
      Float32: 0
    BorderColor3:
      Color3:
        - 0.10588236
        - 0.16470589
        - 0.20784315
    BorderMode:
      Enum: 0
    BorderSizePixel:
      Int32: 1
    ClipsDescendants:
      Bool: false
    Draggable:
      Bool: false
    FontFace:
      Font:
        family: "rbxasset://fonts/families/SourceSansPro.json"
        weight: Regular
        style: Normal
        cachedFaceId: ~
    LayoutOrder:
      Int32: 0
    LineHeight:
      Float32: 1
    MaxVisibleGraphemes:
      Int32: -1
    NextSelectionDown: "null"
    NextSelectionLeft: "null"
    NextSelectionRight: "null"
    NextSelectionUp: "null"
    Position:
      UDim2:
        - - 0
          - 0
        - - 0
          - 0
    RichText:
      Bool: false
    RootLocalizationTable: "null"
    Rotation:
      Float32: 0
    Selectable:
      Bool: false
    SelectionBehaviorDown:
      Enum: 0
    SelectionBehaviorLeft:
      Enum: 0
    SelectionBehaviorRight:
      Enum: 0
    SelectionBehaviorUp:
      Enum: 0
    SelectionGroup:
      Bool: false
    SelectionImageObject: "null"
    SelectionOrder:
      Int32: 0
    Size:
      UDim2:
        - - 0
          - 0
        - - 0
          - 0
    SizeConstraint:
      Enum: 0
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    Text:
      String: Example
    TextColor3:
      Color3:
        - 0.10588236
        - 0.16470589
        - 0.20784315
    TextScaled:
      Bool: false
    TextSize:
      Float32: 8
    TextStrokeColor3:
      Color3:
        - 0
        - 0
        - 0
    TextStrokeTransparency:
      Float32: 1
    TextTransparency:
      Float32: 0
    TextTruncate:
      Enum: 0
    TextWrapped:
      Bool: false
    TextXAlignment:
      Enum: 2
    TextYAlignment:
      Enum: 1
    Visible:
      Bool: true
    ZIndex:
      Int32: 1
  children: []

