rbx_xml/tests/snapshots/test_files__ref_adjacent.snap
---
source: rbx_xml/tests/test-files.rs
expression: viewer.view_children(&dom)

---
- referent: referent-0
  name: Ref Target
  class: Folder
  properties:
    AttributesSerialize:
      BinaryString: ""
    Tags:
      Tags: []
  children: []
- referent: referent-1
  name: Value
  class: ObjectValue
  properties:
    AttributesSerialize:
      BinaryString: ""
    Tags:
      Tags: []
    Value: referent-0
  children: []

