rbx_xml/tests/snapshots/test_files__ref_parent.snap
---
source: rbx_xml/tests/test-files.rs
assertion_line: 26
expression: viewer.view_children(&dom)
---
- referent: referent-0
  name: Ref Target
  class: Folder
  properties:
    Attributes:
      BinaryString: ""
    Tags:
      Tags: []
  children:
    - referent: referent-1
      name: Value
      class: ObjectValue
      properties:
        Attributes:
          BinaryString: ""
        Tags:
          Tags: []
        Value: referent-0
      children: []

