rbx_xml/tests/snapshots/test_files__tags.snap
---
source: rbx_xml/tests/test-files.rs
assertion_line: 26
expression: viewer.view_children(&dom)
---
- referent: referent-0
  name: Folder
  class: Folder
  properties:
    Attributes:
      BinaryString: ""
    SourceAssetId:
      Int64: -1
    Tags:
      Tags:
        - Cool
        - My
        - Tags
  children: []

